<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center|center_horizontal|center_vertical"
    android:minWidth="8dp"
    android:orientation="vertical"
    tools:context=".Game">

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="center|center_horizontal|center_vertical"
        android:inputType="time"
        android:text="@string/_00"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txtNbCoup"
        android:layout_width="98dp"
        android:layout_height="10dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="center|center_horizontal|center_vertical"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:gravity="center|center_horizontal|center_vertical"
        android:padding="0dp"
        android:text="@string/saisir_un_nombre_entre_1_et_100"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtNumber"
        android:layout_width="match_parent"

        android:layout_height="5dp"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:layout_weight="1"
        android:autofillHints=""
        android:background="@color/colorPrimary"
        android:baselineAligned="false"
        android:ems="10"
        android:gravity="center|center_horizontal|center_vertical"
        android:inputType="number"
        android:padding="0dp"
        android:singleLine="false"
        android:textColor="@android:color/background_light"
        android:textColorLink="@color/colorPrimary"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:targetApi="o" />

    <Button
        android:id="@+id/btnValider"
        android:layout_width="400dp"
        android:layout_height="20dp"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/strValider" />

    <TextView
        android:id="@+id/txtIndication"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:gravity="center|center_horizontal|center_vertical"
        android:padding="0dp"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/txtHistorique"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:layout_weight="1"
        android:gravity="center|center_horizontal|center_vertical"
        android:padding="0dp" />

    <LinearLayout
        android:layout_width="429dp"
        android:layout_height="10dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"></LinearLayout>

</LinearLayout>